// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs examples > Alternate horizontal tablist should render correctly 1`] = `
<div>
  <div
    class="v-surface v-alternate"
  >
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-alternate-horizontal-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-alternate-horizontal-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-alternate-horizontal-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-alternate-horizontal-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-xxlarge v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-alternate-horizontal-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Alternate stacked tablist should render correctly 1`] = `
<div>
  <div
    class="v-surface v-alternate"
  >
    <div>
      <ul
        class="v-tabs v-tabs-horizontal"
        role="tablist"
      >
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-stacked-tabs-example-tab-0"
            aria-selected="true"
            class="v-button v-button-tertiary v-button-stacked"
            role="tab"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-home"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
              />
              <path
                class="v-icon-secondary"
                d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
              />
            </svg>
            Label 1
          </button>
        </li>
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-stacked-tabs-example-tab-1"
            aria-selected="false"
            class="v-button v-button-tertiary v-button-stacked"
            role="tab"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-receipt"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
              />
              <path
                class="v-icon-primary"
                d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
              />
            </svg>
            Label 2
          </button>
        </li>
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-stacked-tabs-example-tab-2"
            aria-selected="false"
            class="v-button v-button-tertiary v-button-stacked"
            role="tab"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-statistics"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
              />
              <path
                class="v-icon-primary"
                d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
              />
            </svg>
            Label 3
          </button>
        </li>
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-stacked-tabs-example-tab-3"
            aria-selected="false"
            class="v-button v-button-tertiary v-button-stacked"
            role="tab"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-email"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
              />
            </svg>
            Label 4
          </button>
        </li>
      </ul>
      <div
        class="v-elevation-xxlarge v-flex v-flex-grow v-my-8"
      >
        <div
          class="v-surface"
          id="nova-alternate-stacked-tabs-example-tab-0"
          role="tabpanel"
          style="min-block-size: 200px;"
        >
          <span>
            This is the content area for label 1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Alternate vertical tablist should render correctly 1`] = `
<div>
  <div
    class="v-surface v-alternate"
  >
    <div
      class="v-flex v-flex-wrap v-gap-8"
    >
      <ul
        class="v-tabs v-tabs-vertical"
        role="tablist"
        style="flex-basis: 30%;"
      >
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-vertical-tabs-example-tab-0"
            aria-selected="true"
            class="v-button v-button-tertiary"
            role="tab"
            tabindex="0"
          >
            Label 1
          </button>
        </li>
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-vertical-tabs-example-tab-1"
            aria-selected="false"
            class="v-button v-button-tertiary"
            role="tab"
            tabindex="-1"
          >
            Label 2
          </button>
        </li>
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-vertical-tabs-example-tab-2"
            aria-selected="false"
            class="v-button v-button-tertiary"
            role="tab"
            tabindex="-1"
          >
            Label 3
          </button>
        </li>
        <li
          class="v-tab"
          role="none"
        >
          <button
            aria-controls="nova-alternate-vertical-tabs-example-tab-3"
            aria-selected="false"
            class="v-button v-button-tertiary"
            role="tab"
            tabindex="-1"
          >
            Label 4
          </button>
        </li>
      </ul>
      <div
        class="v-elevation-xxlarge v-flex v-flex-grow"
      >
        <div
          class="v-surface"
          id="nova-alternate-vertical-tabs-example-tab-0"
          role="tabpanel"
          style="min-block-size: 200px;"
        >
          <span>
            This is the content area for label 1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Default horizontal tab should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-horizontal-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-horizontal-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-horizontal-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-horizontal-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-horizontal-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Default stacked tablist should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-stacked-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-home"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-stacked-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-receipt"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
            />
            <path
              class="v-icon-primary"
              d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
            />
          </svg>
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-stacked-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-statistics"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
            />
            <path
              class="v-icon-primary"
              d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
            />
          </svg>
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-stacked-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-email"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
            />
          </svg>
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-stacked-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Default vertical tablist should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-8"
  >
    <ul
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-vertical-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-vertical-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-vertical-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-vertical-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow"
    >
      <div
        class="v-surface v-p-10"
        id="nova-vertical-tabs-example-tab-0"
        role="tabpanel"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Horizontal tab with icon should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-horizontal-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-statistics"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
            />
            <path
              class="v-icon-primary"
              d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
            />
          </svg>
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-horizontal-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-topic"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M8 4.99609C9.10457 4.99609 10 5.89152 10 6.99609C10 8.10066 9.10457 8.99609 8 8.99609C6.89543 8.99609 6 8.10066 6 6.99609C6 5.89152 6.89543 4.99609 8 4.99609Z"
            />
            <path
              class="v-icon-primary"
              d="M10 1C13.3137 1 16 3.68629 16 7C16 10.3137 13.3137 13 10 13H8L5 16V12.915C2.16245 12.4388 0 9.97288 0 7C0 3.68629 2.68629 1 6 1H10ZM6 3C3.79086 3 2 4.79086 2 7C2 9.20914 3.79086 11 6 11H10C12.2091 11 14 9.20914 14 7C14 4.79086 12.2091 3 10 3H6Z"
            />
          </svg>
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-horizontal-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-email"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M16 14H0V6.71387L2 8.42773V12H14V5.17285L8.97656 9.48047C8.41483 9.96196 7.58517 9.96196 7.02344 9.48047L1.68262 4.90137L0 3.5V2H16V14ZM8 7.68262L12.2969 4H3.70312L8 7.68262Z"
            />
          </svg>
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-horizontal-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-home"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
            />
            <path
              class="v-icon-primary"
              d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-icon-horizontal-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Horizontal tab with menu should render correctly 1`] = `
<div>
  <div
    class="v-tab"
    style="block-size: 150px;"
  >
    <button
      aria-controls="nova-horizontal-tabs-with-menu-example"
      aria-expanded="false"
      class="v-button v-button-large v-button-tertiary v-dropdown"
      id="nova-horizontal-tabs-with-menu-example-button"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-home"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
        />
        <path
          class="v-icon-primary"
          d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
       Label
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Tabs examples > Horizontal tablist with disabled tab should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-horizontal-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-horizontal-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-horizontal-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          disabled=""
          role="tab"
          tabindex="-1"
        >
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-horizontal-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-disabled-horizontal-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Stacked tablist with disabled tab should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-stacked-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-home"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-stacked-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-receipt"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
            />
            <path
              class="v-icon-primary"
              d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
            />
          </svg>
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-stacked-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          disabled=""
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-statistics"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
            />
            <path
              class="v-icon-primary"
              d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
            />
          </svg>
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-stacked-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-email"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
            />
          </svg>
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-disabled-stacked-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Stacked tabs with notifications should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-notifications-stacked-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-home"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M24 10.2617V24H0V22.0234H22V11.2295L12 3.51074L2 11.2295V20.0469H0V10.2617L12 1L24 10.2617Z"
            />
            <path
              class="v-icon-secondary"
              d="M16 20H9V11H16V20ZM11 18H14V13H11V18Z"
            />
          </svg>
          Label 1
          <sup
            aria-label="1 unread notification"
            class="v-badge v-badge-number v-typography-label-active"
          >
            1
          </sup>
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-notifications-stacked-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-receipt"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M13 17H7V15H13V17ZM9 13H7V11H9V13ZM14 13H11V11H14V13ZM17 9H7V7H17V9Z"
            />
            <path
              class="v-icon-primary"
              d="M21 24L16 21L12 24L8 21L3 24V21.668L6.97168 19.2852L6.9707 19.2842L8.12402 18.5928L12 21.5L15.876 18.5928L19 20.4678V3.53223L15.876 5.40723L12 2.5L8.12402 5.40723L5 3.53223V18.1357L3 19.335V0L8 3L12 0L16 3L21 0V24Z"
            />
          </svg>
          Label 2
          <sup
            aria-label="2 unread notifications"
            class="v-badge v-badge-number v-typography-label-active"
          >
            2
          </sup>
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-notifications-stacked-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-statistics"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M12.9922 1C18.5068 1.00016 22.9998 5.49317 23 11.0078V12H12V1H12.9922ZM13.9834 10.0166H20.957C20.5107 6.3863 17.6137 3.48932 13.9834 3.04297V10.0166Z"
            />
            <path
              class="v-icon-primary"
              d="M10.1904 4.98633C8.48159 4.9764 6.79225 5.68124 5.46094 7.00195C3.89117 8.56103 2.9873 10.7362 2.9873 12.9805C2.98746 17.4092 6.5935 21.0135 11.0244 21.0137C13.2399 21.0137 15.4958 20.0709 17.0557 18.502C18.3373 17.2011 19.0326 15.5916 19.0127 13.9531L21 13.9336C21.0198 16.0984 20.125 18.2231 18.4658 19.9014C16.5384 21.8378 13.7566 23 11.0244 23C5.50063 22.9999 1.00016 18.5016 1 12.9805C1 10.2099 2.11324 7.5183 4.06055 5.5918C5.76936 3.8939 7.9548 2.99008 10.21 3L10.1904 4.98633Z"
            />
          </svg>
          Label 3
          <sup
            aria-label="3 unread notifications"
            class="v-badge v-badge-number v-typography-label-active"
          >
            3
          </sup>
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-notifications-stacked-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary v-button-stacked"
          role="tab"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-low v-icon-email"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M24 20H0V7.91895L2 9.19238V18H22V6.82129L12 14.1855L0.462891 5.84375C0.0879965 5.60507 -0.0841075 5.14744 0.0400391 4.7207C0.164337 4.29386 0.555431 4.00004 1 4H24V20ZM12 11.8145L19.5664 6H4.43457L12 11.8145Z"
            />
          </svg>
          Label 4
          <sup
            aria-label="4 unread notifications"
            class="v-badge v-badge-number v-typography-label-active"
          >
            4
          </sup>
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-notifications-stacked-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Tablist with automatic activation should render correctly 1`] = `
<div>
  <div>
    <ul
      class="v-tabs v-tabs-horizontal"
      role="tablist"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-auto-horizontal-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-auto-horizontal-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-auto-horizontal-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-auto-horizontal-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow v-my-8"
    >
      <div
        class="v-surface"
        id="nova-auto-horizontal-tabs-example-tab-0"
        role="tabpanel"
        style="min-block-size: 200px;"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Vertical tab with menu should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-8"
  >
    <div
      class="v-tabs v-tabs-vertical"
    >
      <div
        class="v-tab"
      >
        <button
          aria-expanded="false"
          class="v-button v-button-tertiary"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-home"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
            />
            <path
              class="v-icon-primary"
              d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
           Label
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Vertical tablist with disabled tab should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-8"
  >
    <ul
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-vertical-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="0"
        >
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-vertical-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-vertical-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          disabled=""
          role="tab"
          tabindex="-1"
        >
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-disabled-vertical-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          tabindex="-1"
        >
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow"
    >
      <div
        class="v-surface v-p-10"
        id="nova-disabled-vertical-tabs-example-tab-0"
        role="tabpanel"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs examples > Vertical tablist with icon should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-8"
  >
    <ul
      class="v-tabs v-tabs-vertical"
      role="tablist"
      style="flex-basis: 30%;"
    >
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-vertical-tabs-example-tab-0"
          aria-selected="true"
          class="v-button v-button-tertiary"
          role="tab"
          style="min-inline-size: max-content;"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-statistics"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
            />
            <path
              class="v-icon-primary"
              d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
            />
          </svg>
          Label 1
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-vertical-tabs-example-tab-1"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          style="min-inline-size: max-content;"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-topic"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M8 4.99609C9.10457 4.99609 10 5.89152 10 6.99609C10 8.10066 9.10457 8.99609 8 8.99609C6.89543 8.99609 6 8.10066 6 6.99609C6 5.89152 6.89543 4.99609 8 4.99609Z"
            />
            <path
              class="v-icon-primary"
              d="M10 1C13.3137 1 16 3.68629 16 7C16 10.3137 13.3137 13 10 13H8L5 16V12.915C2.16245 12.4388 0 9.97288 0 7C0 3.68629 2.68629 1 6 1H10ZM6 3C3.79086 3 2 4.79086 2 7C2 9.20914 3.79086 11 6 11H10C12.2091 11 14 9.20914 14 7C14 4.79086 12.2091 3 10 3H6Z"
            />
          </svg>
          Label 2
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-vertical-tabs-example-tab-2"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          style="min-inline-size: max-content;"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-email"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M16 14H0V6.71387L2 8.42773V12H14V5.17285L8.97656 9.48047C8.41483 9.96196 7.58517 9.96196 7.02344 9.48047L1.68262 4.90137L0 3.5V2H16V14ZM8 7.68262L12.2969 4H3.70312L8 7.68262Z"
            />
          </svg>
          Label 3
        </button>
      </li>
      <li
        class="v-tab"
        role="none"
      >
        <button
          aria-controls="nova-icon-vertical-tabs-example-tab-3"
          aria-selected="false"
          class="v-button v-button-tertiary"
          role="tab"
          style="min-inline-size: max-content;"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-home"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M9 7C10.1046 7 11 7.89543 11 9V12H9V9H7V12H5V9C5 7.89543 5.89543 7 7 7H9Z"
            />
            <path
              class="v-icon-primary"
              d="M8 0.771118L16 6.48499V15.9996H0V13.9996H14V7.51428L8 3.22913L2 7.51428V11.9996H0V6.48499L8 0.771118Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
          Label 4
        </button>
      </li>
    </ul>
    <div
      class="v-elevation-inset v-flex v-flex-grow"
    >
      <div
        class="v-surface v-p-10"
        id="nova-icon-vertical-tabs-example-tab-0"
        role="tabpanel"
      >
        <span>
          This is the content area for label 1
        </span>
      </div>
    </div>
  </div>
</div>
`;
